--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "npm run build"
+  command = "ng build"
   functions = "netlify/functions"
   publish = "dist/admin-panel/browser"
 
