--- a/package.json
+++ b/package.json
@@ -11,28 +11,28 @@
   "private": true,
   "dependencies": {
     "@ag-grid-community/angular": "^32.3.3",
-    "@ag-grid-community/core": "^32.3.3",
-    "@ag-grid-community/styles": "^32.3.3",
     "@ag-grid-community/client-side-row-model": "^32.3.3",
-    "@ag-grid-community/infinite-row-model": "^32.3.3",
+    "@ag-grid-community/core": "^32.3.3",
     "@ag-grid-community/csv-export": "^32.3.3",
-    "@ag-grid-enterprise/core": "^32.3.3",
+    "@ag-grid-community/infinite-row-model": "^32.3.3",
+    "@ag-grid-community/styles": "^32.3.3",
+    "@ag-grid-enterprise/advanced-filter": "^32.3.3",
     "@ag-grid-enterprise/charts-enterprise": "^32.3.3",
-    "@ag-grid-enterprise/sparklines": "^32.3.3",
     "@ag-grid-enterprise/clipboard": "^32.3.3",
     "@ag-grid-enterprise/column-tool-panel": "^32.3.3",
+    "@ag-grid-enterprise/core": "^32.3.3",
     "@ag-grid-enterprise/excel-export": "^32.3.3",
     "@ag-grid-enterprise/filter-tool-panel": "^32.3.3",
     "@ag-grid-enterprise/master-detail": "^32.3.3",
     "@ag-grid-enterprise/menu": "^32.3.3",
+    "@ag-grid-enterprise/multi-filter": "^32.3.3",
     "@ag-grid-enterprise/range-selection": "^32.3.3",
     "@ag-grid-enterprise/rich-select": "^32.3.3",
     "@ag-grid-enterprise/row-grouping": "^32.3.3",
     "@ag-grid-enterprise/server-side-row-model": "^32.3.3",
     "@ag-grid-enterprise/set-filter": "^32.3.3",
-    "@ag-grid-enterprise/multi-filter": "^32.3.3",
-    "@ag-grid-enterprise/advanced-filter": "^32.3.3",
     "@ag-grid-enterprise/side-bar": "^32.3.3",
+    "@ag-grid-enterprise/sparklines": "^32.3.3",
     "@ag-grid-enterprise/status-bar": "^32.3.3",
     "@ag-grid-enterprise/viewport-row-model": "^32.3.3",
     "@angular/animations": "^17.3.0",
@@ -40,6 +40,7 @@
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
+    "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.3.0",
     "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.3.0",
@@ -49,6 +50,7 @@
     "@swimlane/ngx-charts": "^21.0.0",
     "ag-grid-angular": "^32.3.3",
     "convert-csv-to-json": "^2.50.0",
+    "firebase": "^11.1.0",
     "ngx-csv-parser": "^2.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
