--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@angular/router": "^17.3.0",
     "@canvasjs/angular-charts": "^1.2.0",
     "@swimlane/ngx-charts": "^21.0.0",
+    "ag-charts-angular": "^11.0.0",
     "ag-grid-angular": "^32.3.3",
+    "ag-grid-community": "^32.3.3",
     "convert-csv-to-json": "^2.50.0",
     "firebase": "^11.1.0",
     "ngx-csv-parser": "^2.0.0",
